# AgentVis

./: .editorconfig  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  runtime-requirements-v1.txt  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Run-MatrixTest.ps1  Test.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native-scripts/web-search/: ddgs_search.py
src-tauri/skills-bundle/agent-browser/: SKILL.md
src-tauri/skills-bundle/agent-browser/references/: commands.md  proxy-support.md  streaming-content.md
src-tauri/skills-bundle/agent-browser/scripts/: browser-command.bat  browser_command.py  browser_runtime.py  save_browser_image.py  start-chrome-debug.bat
src-tauri/skills-bundle/agnes-image/: SKILL.md
src-tauri/skills-bundle/agnes-video/: SKILL.md
src-tauri/skills-bundle/arxiv-search/: SKILL.md
src-tauri/skills-bundle/context7-docs/: SKILL.md
src-tauri/skills-bundle/desktop-control/: SKILL.md
src-tauri/skills-bundle/docx/: SKILL.md
src-tauri/skills-bundle/docx/scripts/: accept_changes.py
src-tauri/skills-bundle/elite-coding/: SKILL.md
src-tauri/skills-bundle/email-helper/: SKILL.md
src-tauri/skills-bundle/file-organizer/: SKILL.md
src-tauri/skills-bundle/frontend-design/: SKILL.md
src-tauri/skills-bundle/github-lookup/: .bundle_revision  SKILL.md
src-tauri/skills-bundle/html-slides/: SKILL.md
src-tauri/skills-bundle/hyperframes-video/: SKILL.md
src-tauri/skills-bundle/image-batch-processor/: SKILL.md
src-tauri/skills-bundle/minimax-pdf/: SKILL.md
src-tauri/skills-bundle/model-config/: SKILL.md
src-tauri/skills-bundle/news-summary/: SKILL.md  news.py
src-tauri/skills-bundle/prd-writer/: SKILL.md
src-tauri/skills-bundle/skill-creator/: .bundle_revision  SKILL.md
src-tauri/skills-bundle/video-data-collector/: SKILL.md
src-tauri/skills-bundle/video-downloader/: SKILL.md
src-tauri/skills-bundle/web-scraper/: SKILL.md
src-tauri/skills-bundle/xlsx/: SKILL.md
src-tauri/skills-bundle/yahoo-finance/: .bundle_revision  SKILL.md  yf.py
src-tauri/src/: error.rs  lib.rs  main.rs  text_utils.rs  webview_diagnostics.rs
src-tauri/src/commands/: agent.rs  cloud_embedding.rs  command_validator.rs  cron.rs  data_management.rs  desktop_notification.rs  diff_record.rs  document_parser.rs  embedded_node_setup.rs  embedded_python_setup.rs  feishu.rs  file.rs  hub.rs  llm.rs  memory.rs  memory_trigger.rs  message.rs  mod.rs  network_broker.rs  preview_staging.rs  process_sandbox.rs  rag.rs  renderer_health.rs  search.rs  security_settings.rs  settings.rs  shell.rs  skill_install.rs  skills_bootstrap.rs  slack.rs  snapshot.rs  system_tray.rs  text_preview.rs  trash_bin.rs  trash_transfer.rs  web_search.rs  workspace_import.rs
src-tauri/src/crypto/: keystore.rs  mod.rs
src-tauri/src/db/: agent_repo.rs  cron_repo.rs  diff_record_repo.rs  file_repo.rs  hub_repo.rs  memory_repo.rs  memory_trigger_repo.rs  message_repo.rs  mod.rs  models.rs  schema.rs  snapshot_repo.rs  vector_repo.rs
src-tauri/src/llm/: anthropic.rs  gemini.rs  http_client.rs  json_repair.rs  mod.rs  openai.rs  reasoning.rs  schema_compat.rs  types.rs
src-tauri/src/tests/: llm_gateway_test.rs
src-tauri/tests/: wfp_network_isolation.rs
(+888 files in other folders)
